Cabal-Version:        2.4
Name:                 hs-leopard
Version:              0.0.1
Synopsis:             Haskell bindings to the Leopard fast erasure coding library

Description:          Haskell bindings to the Leopard fast erasure coding library.

License:              BSD-3-Clause
License-files:        LICENSE

Author:               Balazs Komuves
Copyright:            (c) 2026 Logos
Maintainer:           balazs (at) free (dot) technology

Stability:            Experimental
Category:             Cryptography
Tested-With:          GHC == 9.12.1
Build-Type:           Simple

--------------------------------------------------------------------------------

extra-source-files:   cpp/LeopardCommon.h
                      cpp/LeopardFF16.h
                      cpp/LeopardFF8.h
                      cpp/leopard.h
                      cpp/sse2neon/sse2neon.h
                      cpp/LICENSE
                      README.md
                      LICENSE

--------------------------------------------------------------------------------

source-repository head
  type:                 git 
  location:             https://github.com/logos-storage/hs-leopard

--------------------------------------------------------------------------------

Library

  Build-Depends:        base >= 4 && <5, 
                        array >= 0.5 && < 0.6,
                        random >= 1.3 && < 1.4,
                        bytestring >= 0.12 && < 0.14

  Exposed-Modules:      Leopard
                        Leopard.Codec
                        Leopard.Example
                        Leopard.Binding
                        Leopard.Types
                        Leopard.Misc

  Default-Language:     Haskell2010
  Default-Extensions:   BangPatterns

  Hs-Source-Dirs:       src
  Include-Dirs:         cpp

  CXX-Sources:          cpp/LeopardCommon.cpp
                        cpp/LeopardFF16.cpp
                        cpp/LeopardFF8.cpp
                        cpp/leopard.cpp

  Default-Extensions:   ForeignFunctionInterface, CPP

  ghc-options:          -fwarn-tabs -fno-warn-unused-matches -fno-warn-name-shadowing -fno-warn-unused-imports                        

  cc-options:           -x c++
  cxx-options:          -O3 -std=c++11
  extra-libraries:      stdc++

--------------------------------------------------------------------------------

Executable testMain

  build-depends:       base >= 4 && < 5, 
                       bytestring >= 0.12 && < 0.14,
                       hs-leopard

  hs-source-dirs:      test
  main-is:             testMain.hs
  Default-Language:    Haskell2010

--------------------------------------------------------------------------------
